objects/EZ__c.object
<CustomObject>
    <description>NA3</description>
    <fields>
        <fullName>EZ2__c</fullName>
        <description>Test</description>
        <label>EZ2</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enhance2__c</fullName>
        <label>Enhance2</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enhance__c</fullName>
        <description>Test</description>
        <label>Enhance</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>EZ</label>
    <nameField>
        <label>EZ Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EZ</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>